--- a/src/App.css
+++ b/src/App.css
@@ -36,12 +36,16 @@ ul {
   list-style-type: none;
 }
 
+.w-100{
+  width: 100%;
+}
+
 /* containers */
 .container{
   padding: 0 2.4rem;
 }
 
-.bloc{
+.block{
   display: block;
 }
 
