--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root{
   --dark-green: #006e25;
   --yellow: #ffbc39;
+  --white: #ffffff;
   
   --background-gray: #f5f5f5;
   --text-dark-gray: #292929;
