--- a/src/layout/style.css
+++ b/src/layout/style.css
@@ -3,3 +3,8 @@
     display: grid;
     grid-template-rows: 11.1rem calc(100vh - 13.5rem);
 }
+
+.outlet-container{
+    max-width: 1920px;
+    width: 100%
+}
