--- a/src/App.css
+++ b/src/App.css
@@ -38,14 +38,25 @@ ul {
   list-style-type: none;
 }
 
+/* [ANTD-MODS] */
 .ant-border-color *{
   border-color: var(--white-gray) !important;
 }
 
+/* [WITDH] */
 .w-100{
   width: 100%;
 }
 
+.w-fit-content{
+  width: fit-content;
+}
+
+.w-max-fit-content{
+  width: fit-content;
+}
+
+/* [HEIGHT] */
 .h-100{
   height: 100%;
 }
@@ -54,7 +65,7 @@ ul {
   min-height: 0;
 }
 
-/* containers */
+/* [CONTAINERS] */
 .container{
   padding: 0 2.4rem;
 }
@@ -68,7 +79,7 @@ ul {
   display: block;
 }
 
-/* flexbox */
+/* [FLEXBOX] */
 .flex{
   display: flex;
 }
@@ -105,7 +116,8 @@ ul {
   gap: 4.8rem;
 }
 
-/* fonts - weight */
+/* [FONTS] */
+/* fonts - weights */
 .b-500{
   font-weight: 500;
 }
@@ -118,6 +130,28 @@ ul {
   font-weight: 700;
 }
 
+/* fonts - sizes */
+.f-size-14{
+  font-size: 1.4rem;
+}
+
+.f-size-16{
+  font-size: 1.6rem;
+}
+
+.f-size-18{
+  font-size: 1.4rem;
+}
+
+.f-size-20{
+  font-size: 2rem;
+}
+
+.f-size-24{
+  font-size: 2.4rem;
+}
+
+/* [PADDINGS] */
 /* zero paddings */
 .p-right-zero{
   padding-right: 0;
