--- a/src/components/ProgressBar/style.css
+++ b/src/components/ProgressBar/style.css
@@ -1,4 +1,4 @@
-.ant-progress-inner{
-  border: .1rem solid var(--text-dark-gray);
-  background-color: #fff !important;
+.ant-progress-inner {
+	border: 0.1rem solid var(--text-dark-gray);
+	background-color: #fff !important;
 }
