--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -1,31 +1,30 @@
-.ant-modal-content{
-  padding: 0 !important;
+.ant-modal-content {
+	padding: 0 !important;
 }
 
-.ant-modal-close{
-  color: #292929 !important;
-  top: 1rem !important;
-  right: 1rem !important;
-  
+.ant-modal-close {
+	color: #292929 !important;
+	top: 1rem !important;
+	right: 1rem !important;
 }
 
-.ant-modal-close-x{
-  font-size: 2.4rem !important;
+.ant-modal-close-x {
+	font-size: 2.4rem !important;
 }
 
-.ant-modal-body{
-  padding: 6.8rem 6.4rem !important;
-  font-size: 1.6rem !important;
-  font-weight: 500;
+.ant-modal-body {
+	padding: 6.8rem 6.4rem !important;
+	font-size: 1.6rem !important;
+	font-weight: 500;
 }
 
-.ant-modal-footer{
-  display: flex;
-  justify-content: flex-end;
-  border-top: .1rem solid var(--white-gray) !important;
-  margin: 0 !important;
-  padding: 1.4rem !important;
+.ant-modal-footer {
+	display: flex;
+	justify-content: flex-end;
+	border-top: 0.1rem solid var(--white-gray) !important;
+	margin: 0 !important;
+	padding: 1.4rem !important;
 }
-.modal-button{
-  max-width: 8.3rem;
+.modal-button {
+	max-width: 8.3rem;
 }
