--- a/src/components/Table/style.css
+++ b/src/components/Table/style.css
@@ -1,42 +1,45 @@
-
-
-.ant-table-wrapper *{
-    color: var(--text-dark-gray) !important;
+.ant-table-wrapper * {
+	color: var(--text-dark-gray) !important;
 }
 
-.ant-table-wrapper tbody tr{
-    cursor: pointer;
+.ant-table-wrapper tbody tr {
+	cursor: pointer;
 }
 
-.ant-table-wrapper tbody .ant-table-placeholder{
-    cursor:auto;
+.ant-table-wrapper tbody .ant-table-placeholder {
+	cursor: auto;
 }
 
-.ant-table-wrapper .ant-table{
-    border-radius: 1.4rem;
+.ant-table-wrapper .ant-table {
+	border-radius: 1.4rem;
 }
 
-.ant-table-wrapper .ant-table >.ant-table-container{
-    border: .1rem solid var(--white-gray);
-    border-bottom: none;
+.ant-table-wrapper .ant-table > .ant-table-container {
+	border: 0.1rem solid var(--white-gray);
+	border-bottom: none;
 }
 
-.ant-table-wrapper .ant-table >.ant-table-footer{
-    border: .1rem solid var(--white-gray);
-    border-top: none;
+.ant-table-wrapper .ant-table > .ant-table-footer {
+	border: 0.1rem solid var(--white-gray);
+	border-top: none;
 }
 
-.ant-table-wrapper .ant-table-thead >tr>th{
-    border-color: var(--white-gray);
+.ant-table-wrapper .ant-table-thead > tr > th {
+	border-color: var(--white-gray);
 }
 
-.ant-table-wrapper .ant-table-tbody >tr >td{
-    border-color: var(--white-gray);
-} 
-.ant-table-wrapper .ant-table-thead >tr>th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before{
-    content: none;
+.ant-table-wrapper .ant-table-tbody > tr > td {
+	border-color: var(--white-gray);
+}
+.ant-table-wrapper
+	.ant-table-thead
+	> tr
+	> th:not(:last-child):not(.ant-table-selection-column):not(
+		.ant-table-row-expand-icon-cell
+	):not([colspan])::before {
+	content: none;
 }
 
-.ant-table-wrapper .ant-pagination-item-active{
-    border-color: var(--dark-green);
+.ant-table-wrapper .ant-pagination-item-active {
+	border-color: var(--dark-green);
 }
